<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gogo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- MainActivity.java -->
    <string name="main_about">关于</string>
    <string name="main_help">帮助</string>
    <string name="main_background">后台运行</string>
    <string name="main_exit">退出应用</string>
    <string name="main_positive">确定</string>
    <string name="main_map">地图</string>
    <string name="main_step">计步</string>
    <string name="main_history">历史</string>
    <string name="main_analyse">分析</string>
    <string name="main_setting">设置</string>


    <!-- step_mode.xml -->
    <string name="step_mode_sensitive">灵敏度</string>
    <string name="step_mode_tv_sensitive">8</string>
    <string name="step_mode_step_normal">普通模式</string>
    <string name="step_mode_step_pocket">口袋模式</string>
    <string name="step_mode_lightive">光敏度</string>
    <string name="step_mode_tv_lightive">10</string>

    <!-- step_msg.xml -->
    <string name="step_msg_calorie">卡路里(Cal)</string>
    <string name="step_msg_tv_calorie">0</string>
    <string name="step_msg_distance">路程(m)</string>
    <string name="step_msg_tv_distance">0</string>
    <string name="step_msg_speed">均速(km/h)</string>
    <string name="step_msg_tv_speed">0</string>

    <!-- step_setting.xml -->
    <string name="step_setting_sex">性别</string>
    <string name="step_setting_tv_sex">男</string>
    <string name="step_setting_height">身高(cm)</string>
    <string name="step_setting_tv_height">175</string>
    <string name="step_setting_weight">体重(kg)</string>
    <string name="step_setting_tv_weight">65</string>
    <string name="step_setting_steplen">步长(cm)</string>
    <string name="step_setting_tv_steplen">50</string>
    <string name="step_setting_age">年龄</string>
    <string name="step_setting_tv_age">24</string>

    <!-- tab_fragment_step.xml -->
    <string name="tab_fragment_step_tv_percent">0.0%</string>
    <string name="tab_fragment_step_goal">目标</string>
    <string name="tab_fragment_step_tv_goal">10000</string>
    <string name="tab_fragment_step_tv_step">0</string>
    <string name="tab_fragment_step_bt_reset">重置</string>
    <string name="tab_fragment_step_bt_control">开始</string>
    <string name="tab_fragment_step_bt_pause">暂停</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="customized_intro">Start custom Intro</string>
    <string name="disable_swipe_intro_1">Disable swipe</string>
    <string name="disable_swipe_intro_2">Disable swipe Layout 2</string>
    <string name="default_intro">Start default Intro</string>
    <string name="fade_animation">Set Fade animation</string>
    <string name="custom_animation">Set custom Transformer</string>
    <string name="progress_indicator">Set progress indicator</string>
    <string name="custom_indicator">Set custom indicator</string>
    <string name="custom_color_indicator">Set custom color indicator</string>
    <string name="custom_color_progress_indicator">Set custom color progress indicator</string>
    <string name="second_layout_intro">Start Intro with Layout 2</string>
    <string name="title_activity_default_intro">DefaultIntro</string>
    <string name="title_activity_custom_intro">CustomIntro</string>
    <string name="title_activity_second_intro">SecondLayoutIntro</string>
    <string name="title_activity_default_intro_disable">DisableSwipeDefaultLayoutIntro</string>
    <string name="title_activity_second_intro_disable">DisableSwipeSecondLayoutIntro</string>
    <string name="title_activity_disable_swipe_intro">DisableSwipeIntro</string>
    <string name="skip">Y U DO DIS TO ME?</string>
    <string name="header_animations">Animations</string>
    <string name="header_indicators">Indicators</string>

    <string name="zoom_animation">SET ZOOM ANIMATION</string>
    <string name="color_animation">SET COLOR ANIMATION</string>
    <string name="flow_animation">SET FLOW ANIMATION</string>
    <string name="depth_animation">SET DEPTH ANIMATION</string>
    <string name="slideover_animation">SET SLIDEOVER ANIMATION</string>
    <string name="disable_swiping_slide_text">The first button disables swiping to the next slide, but you can still swipe back to previous slides. Swiping is re-enabled after moving to a previous slide \n\n The second button disables swiping completely. \n\n The third button disables the Next/Done button, independent of locking swiping.</string>
    <string name="permission_intro">Intro with Permissions</string>
    <string name="permission_intro2">Intro with Permissions 2</string>
    <string name="title_activity_permissions_intro">Permissions Intro</string>

    <!-- Input demo slide -->
    <string name="slide_input_title">Slide: Input Demo</string>
    <string name="slide_input_description">This slide demonstrates how input is saved over orientation and slide changes.</string>
    <string name="slide_input_edittext">Type something here.</string>
    <string name="slide_input_checkbox">Check something</string>

    <!-- PolicyDemoSlide -->
    <string name="slide_policy_demo_title">Slide policy demo</string>
    <string name="slide_policy_demo_description">One may only continue to the next slide if the checkbox has been checked.</string>
    <string name="slide_policy_demo_cb">Check me!</string>
    <string name="slide_policy_demo_error">Please check the checkbox in order to continue.</string>

    <!-- CustomTypefaceDemoSlide -->
    <string name="header_custom_typeface">With Custom Typeface</string>
    <string name="simple_custom">Simple Typeface example</string>
    <string name="skip_done_typeface">Skip/Done typeface example</string>
    <string name="title_font">nemoy_medium.ttf</string>
    <string name="desc_font">OpenSans-Light.ttf</string>

    <!-- WizardModeDemoSlide -->
    <string name="header_wizard_mode">Wizard Mode</string>
    <string name="wizard_one">Wizard Example</string>

    <string name="Upload">录入数据</string>
    <string name="Error">Error</string>
    <string name="Complete">Complete</string>
    <string name="IndeterminateProgressSample">Indeterminate Progress Sample</string>
    <string name="IntegerProgressSample">Integer Progress Sample</string>
    <string name="StateChangeSample">State Change Sample</string>
    <string name="ProgressPaddingSample">Progress Padding Sample</string>
    <string name="CustomSelectorSample">Custom Selector Sample</string>
    <string name="title_activity_collection_menu">CollectionMenuActivity</string>


    <string name="menu_settings">设置</string>
    <string name="step_number">步\t数</string>
    <string name="use_time">用\t时</string>
    <string name="distance">行 程</string>
    <string name="calories">热 量</string>
    <string name="velocity">速 度</string>
    <string name="zero">0</string>
    <string name="double_zero">0.0</string>
    <string name="calories_zero">0.0</string>
    <string name="velocity_zero">0.0</string>
    <string name="km">m</string>
    <string name="calorie">卡路里</string>
    <string name="kilometer_per_hour">m/s</string>
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="cancel">清零</string>
    <string name="daily">今日累积</string>
    <string name="image_star">image_star</string>
    <string name="sunday">星期天</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="month">月\t</string>
    <string name="day">日</string>
    <string name="todo">TODO</string>
    <string name="information">说明</string>
    <string name="settings_title">设置</string>
    <string name="sensitivity">灵敏度：</string>
    <string name="low">低</string>
    <string name="high">高</string>
    <string name="sensitivity_info">灵敏度越高,对身体的动作越敏感.请调节灵敏度来适应不同的体形,路面等因素.</string>
    <string name="step_length">步长:</string>
    <string name="cm">厘米</string>
    <string name="setp_length_info_1">为估算行走的距离和速度，请输入步长</string>
    <string name="setp_length_info_2">(得出的速度和距离较为粗略，仅供参考)</string>
    <string name="weigth">体重:</string>
    <string name="kg">公斤</string>
    <string name="weight_info">为计算消耗的热量(卡路里)，请入体重。</string>
    <string name="save">保存</string>
    <string name="cancle">取消</string>
    <string name="title_activity_start">StartActivity</string>

</resources>