<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cc.gogo.Fragments.RunFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="步行"
            android:textColor="#7B7B7B"
            android:textSize="30sp"
            android:textAlignment="center"
            android:fontFamily="sans-serif" />



        <TextView
            android:layout_marginTop="60dp"
            android:id="@+id/tv_walk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tab_fragment_step_tv_step"
            android:textColor="#ff33b5e5"
            android:textSize="100sp" />



        <TextView
            android:layout_marginTop="200dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="跑步"
            android:textColor="#7B7B7B"
            android:textSize="30sp"
            android:textAlignment="center" />


        <TextView
            android:layout_marginTop="230dp"
            android:id="@+id/tv_run"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tab_fragment_step_tv_step"
            android:textColor="#ff33b5e5"
            android:textSize="100sp" />

        <LinearLayout
            android:layout_marginTop="430dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/step_btn_background"
                android:text="@string/tab_fragment_step_bt_reset"
                android:textColor="@drawable/step_btn_color" />

            <TextView
                android:id="@+id/cm_pass_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:text="00:00:00"
                android:textColor="#ff33b5e5"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn_start"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/step_btn_background"
                android:text="@string/tab_fragment_step_bt_control"
                android:textColor="@drawable/step_btn_color" />
            <Button
                android:id="@+id/btn_pause"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/step_btn_background"
                android:text="@string/tab_fragment_step_bt_pause"
                android:textColor="@drawable/step_btn_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="360dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="#7B7B7B"
                android:text="@string/step_msg_calorie" />

            <TextView
                android:id="@+id/tv_calorie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="30sp"
                android:text="@string/step_msg_tv_calorie" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#7B7B7B"
                android:textSize="15sp"
                android:text="@string/step_msg_distance" />

            <TextView
                android:id="@+id/tv_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@android:color/holo_blue_light"
                android:text="@string/step_msg_tv_distance" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="#7B7B7B"
                android:text="@string/step_msg_speed" />

            <TextView
                android:id="@+id/tv_velocity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@android:color/holo_blue_light"
                android:text="@string/step_msg_tv_speed" />
        </LinearLayout>
        </LinearLayout>


    </RelativeLayout>

</FrameLayout>
