<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="步行"
        android:textColor="#7B7B7B"
        android:textSize="30sp"
        android:textAlignment="center"
        android:fontFamily="sans-serif" />
    <TextView
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tab_fragment_step_tv_step"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="100sp"
        android:id="@+id/textView" />

    <LinearLayout
        android:layout_marginTop="400dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_reset"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/step_btn_background"
            android:text="@string/tab_fragment_step_bt_reset"
            android:textColor="@drawable/step_btn_color" />

        <Chronometer
            android:id="@+id/cm_passtime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:format="00:00:00"
            android:gravity="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="25sp" />

        <Button
            android:id="@+id/bt_control"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/step_btn_background"
            android:text="@string/tab_fragment_step_bt_control"
            android:textColor="@drawable/step_btn_color" />
    </LinearLayout>

    <TextView
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="跑步"
        android:textColor="#7B7B7B"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:id="@+id/textView2" />

    <TextView
        android:layout_marginTop="13dp"
        android:id="@+id/tv_steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tab_fragment_step_tv_step"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="100sp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />
</RelativeLayout>
